# eth-indexer-rs

./: .env  .env.local  Cargo.toml  LICENSE  README.md  env.example  test.sh
scripts/: dev.sh  setup.sh  start.sh
src/: executor.rs  health_cache.rs  historical.rs  lib.rs  main.rs  network_stats.rs  token_service.rs
src/api/: routes.rs
src/api/handlers/: accounts.rs  blocks.rs  health.rs  mod.rs  network.rs  search.rs  stats.rs  tokens.rs  transactions.rs
src/beacon/: client.rs  mod.rs
src/config/: mod.rs
src/database/: mod.rs  models.rs
src/database/migrations/: 001__core_blockchain.sql  002__accounts_withdrawals.sql  002__add_accounts.sql  003__add_token_transfers.sql  003__tokens_complete.sql  004__add_historical_transaction_cache.sql  004__system_tables.sql  005__add_config_table.sql  006__add_withdrawal_unique_constraint.sql
src/indexer/: block_processor.rs  mod.rs  transaction_processor.rs
src/rpc/: client.rs  executor.rs
src/web/: mod.rs
src/web/static/: account-detail.html  accounts.html  block-detail.html  blocks.html  index.html  search.html  transaction-detail.html  transactions.html
src/web/static/css/: styles.css
src/web/static/js/: account-detail.js  accounts.js  block-detail.js  blocks.js  dashboard.js  search.js  transaction-detail.js  transactions.js
tests/: integration_tests.rs  tests.rs
