[package]
name = "eth-indexer-rs"
version = "0.1.0"
edition = "2024"
description = "A blockchain indexer for Ethereum-like chains"
authors = ["estevaopbs"]

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Web framework
axum = "0.6.18"
tower-http = { version = "0.4.0", features = ["cors", "trace", "fs"] }
tower = "0.5.2"

# Ethereum interaction
ethers = { version = "2.0.14", features = ["legacy", "ws", "ipc"] }
ethers-providers = "2.0.14"
ethers-core = "2.0.14"

# HTTP client for Beacon API
reqwest = { version = "0.12.22", features = ["json"] }
hex = "0.4"

# Google Cloud authentication
gcp_auth = "0.8"

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "json",
    "chrono",
] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
anyhow = "1.0"
futures = "0.3"
regex = "1.10"

[profile.dev]
opt-level = 0
debug = 0
incremental = true
codegen-units = 256
